View by group is working and need to complete modify

--- a/mysite/WebContent/index.html
+++ b/mysite/WebContent/index.html
@@ -2,8 +2,8 @@
 
 <!--#include file="header.html" -->
 <p align="center">
-This system is used to maintain email addresses. The feature inclues <br>
-- Adding an email adress<br>
+This system is used to maintain email addresses. The feature includes <br>
+- Adding an email address<br>
 - Query an email address
 </p>
 
